# CA_HW2

./: Пояснительная записка.docx
output/: out11.txt  out12.txt  out21.txt  out22.txt  out31.txt  out32.txt  out41.txt  out42.txt  out51.txt
task255/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rnd.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h
tests/: test1.txt  test2.txt  test3.txt  test4.txt
